--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-html-id": "^0.1.5"
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-html-id": "0.1.5",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
